# FaceTimeClone

./: CMakeLists.txt  README.md
include/: audio.h  network.h  video_stream.hpp
src/: audio.c  main.cpp  network.c  video_stream.cpp
